--- a/src/components/3-main/main.css
+++ b/src/components/3-main/main.css
@@ -9,6 +9,7 @@
 
 
 main.flex{
+    padding-top: 20px;
     gap: 2.64rem;
     align-items: start;
 }
@@ -42,7 +43,9 @@ main section.left-section.flex button.activeB{
     border: 1px solid var(--blue);
 }
 
-
+.light main section.left-section.flex button.activeB{
+    border: 1px solid #000;
+}
 
 
 
@@ -51,20 +54,25 @@ main section.left-section.flex button.activeB{
    2. Right Section ==> Cards
 ================================*/
 main section.right-section.flex{
-    /* flex-grow: 1; */
+    flex-grow: 1;
     flex-wrap: wrap;
     column-gap: 16px;
     row-gap: 2rem;
     justify-content: center;
 }
 .card{
+    box-shadow: -1px 1px 1px rgba(0, 0, 0, 0.2),1px 1px 1px rgba(0, 0, 0, 0.2);
     border: 1px solid rgba(93, 188, 252, .3);
     transition: .3s;
     border-radius: 5px;
     background-image: linear-gradient(rgba(255,255,255,.05),rgba(255,255,255,.05));
 }
+.light .card,.light .card:hover{
+    border: none;
+}
 .card img{
     border-radius: 5px;
+
 }
 .card:hover{
     border: 1px solid var(--blue);
@@ -72,13 +80,17 @@ main section.right-section.flex{
     scale: 1.01;
     cursor: pointer;
 }
-
+.light .card:hover{
+    background-color: rgb(246, 246, 246);
+    
+}
 .card .box{
     padding: 1rem .4rem;
 
 }
 .card .box .title{
     color: var(--title);
+    text-transform: capitalize;
 }
 .card .box .sub-title{
     color: var(--subtitle);
