--- a/src/components/2-hero/hero.css
+++ b/src/components/2-hero/hero.css
@@ -8,6 +8,7 @@
 */
 section.hero{
     margin-top: 3rem;
+    padding-top: 20px;
 }
 
 
@@ -18,9 +19,11 @@ section.hero{
 section.hero .parent-avatar.flex{
     align-items: end;
     gap: 0.4rem;
+    
 }
 section.hero .left-section{
     flex-grow: 1;
+    
 }
 section.hero .avatar{
     width: 88px;
@@ -64,3 +67,13 @@ section.hero .all-icons .icon:hover{
 /* ================================
    2. Right Section ==> Animation
 ===================================*/
+section.hero .animation{
+    width: 100%;
+    translate: 40px 150px;
+}
+
+@media (max-width:1250px){
+    section.hero .animation{
+      display: none;
+    }
+  }
