--- a/src/components/4-contact/contact.css
+++ b/src/components/4-contact/contact.css
@@ -1,3 +1,6 @@
+section.contact-us{
+  padding-top: 4gh0px;
+}
 section.contact-us .title {
   font-size: 2.1rem;
   color: var(--title);
@@ -28,17 +31,29 @@ section.contact-us #message {
   transition: 0.3s;
   font-size: 1.1rem;
 }
+.light section.contact-us #email,
+.light section.contact-us #message{
+  background:rgba(255, 255, 255, 0.162);
+  border:1px solid rgba(128, 128, 128, 0.451);
+  box-shadow: 1px 1px 1px rgba(73, 73, 75, 0.105);
+  color: #232324;
+}
 section.contact-us .myMessage{
     align-items: center;
 }
 section.contact-us #email:focus,
-section.contact-us #message:focus {
-  border: 1px solid rgb(45, 212, 191);
-}
+section.contact-us #message:focus,
 section.contact-us #email:hover,
 section.contact-us #message:hover {
   border: 1px solid rgb(45, 212, 191);
 }
+.light section.contact-us #email:focus,
+.light section.contact-us #message:focus,
+.light section.contact-us #email:hover,
+.light section.contact-us #message:hover {
+  border: 1px solid rgb(78, 80, 80);
+}
+
 section.contact-us #message {
   min-height: 9rem;
   resize: vertical;
@@ -58,10 +73,22 @@ section.contact-us .submit {
 section.contact-us .submit:hover {
   scale: 0.97;
 }
+section.contact-us .message{
+  color: var(--title);
+  align-items: center;
+}
+.contact-animation{
+  margin-top:-60px;
+}
 
 /* =====================================
    3. Responsive Design ==> Mediaquires
 ========================================*/
+@media (max-width:1250px){
+  section.contact-us .contact-animation{
+    display: none;
+  }
+}
 @media (max-width: 600px) {
   section.contact-us .animation {
     display: none;
@@ -79,7 +106,7 @@ section.contact-us .submit:hover {
   section.contact-us #message {
     width: 100%;
     margin-left: 0;
-    padding: 0.7rem 0;
+    padding: 0.7rem;
     margin-top: 1rem;
   }
   section.contact-us .submit{
