--- a/src/index.css
+++ b/src/index.css
@@ -37,7 +37,17 @@ html {
   --container-padding: 4.8rem;
 }
 .light {
-  --primary: #fff;
+  --primary: rgb(250, 250, 250);
+  --secondary: rgb(255, 255, 255);
+  --border: rgba(202, 202, 202, 0.518);
+
+  --title: rgb(39 39 42);
+  --subtitle: rgb(82 82 91);
+
+  --bgHeader: rgb(253, 253, 253);
+  --blue: rgb(0, 149, 246);
+
+  --icon-hover: #333;
 }
 body {
   background-color: var(--primary);
@@ -83,7 +93,10 @@ button:hover {
 button.active {
   scale: 0.9;
 }
-
+button:disabled{
+  opacity: 0.4;
+  cursor: not-allowed;
+}
 /* Scroll bar */
 ::-webkit-scrollbar {
   width: 0.8rem;
@@ -115,6 +128,8 @@ button.active {
   right: 3%;
   text-align: center;
   border: 1px solid rgba(255, 255, 255, 0.2);
+  font-size: 1.25rem;
+  color: #fee;
 }
 .scroll2Top:hover{
   background-color: rgb(25, 118, 210);
@@ -143,5 +158,6 @@ button.active {
     width: 2.2rem;
     height: 2.2rem;
     opacity: .5;
+    font-size: 1rem;
   }
 }
